@@ -1,15 +1,13 @@
 // gemc
-#include "Gui.h"
+#include "gui.h"
 
-QtButtonsWidget* GemcGUI::createLeftButtons()
+void GemcGUI::createLeftButtons()
 {
 	vector<string> bicons;
 
 	bicons.push_back(":/images/buttons/firstButton");
 	bicons.push_back(":/images/buttons/secondButton");
 
-	QtButtonsWidget *window = new QtButtonsWidget(128, 128, bicons);
+	leftButtons = new QtButtonsWidget(128, 128, bicons);
 
-
-	return window;
 }
