@@ -3,9 +3,9 @@ Import('env')
 env.Prepend(LIBS = 'grun')
 
 sources = Split("""
-	GRun.cc
-    GRunAction.cc
-    GActionInitialization.cc
+	gRun.cc
+    gRunAction.cc
+    gActionInitialization.cc
 	""")
 
 env.Library(source = sources, target = "#lib/grun")
